--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "webpack build"
+    "build": "esbuild src/index.tsx --bundle --minify --sourcemap --outfile=dist/bundle.js",
+    "serve": "esbuild src/index.tsx --bundle --servedir=www --outdir=www/js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "esbuild": "^0.14.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.136.0"
+  },
   "devDependencies": {
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/three": "^0.135.0",
+    "typescript": "^4.5.4"
   },
   "main": "src/index.tsx",
   "author": "Jordi Izquierdo",
