--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "strict": false,
+    "esModuleInterop": true,
+    "jsx": "react",
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
