--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
   "name": "r3f-webpack-template",
   "version": "1.0.0",
-  "private": true,
+  "author": "Jordi Izquierdo",
+  "license": "ISC",
   "scripts": {
-    "build": "esbuild src/index.tsx --bundle --minify --sourcemap --outfile=dist/bundle.js",
+    "build": "esbuild src/index.tsx --bundle --minify --outfile=dist/bundle.js",
     "serve": "esbuild src/index.tsx --bundle --servedir=dist --outdir=dist"
   },
   "dependencies": {
-    "esbuild": "^0.14.8",
+    "@react-three/drei": "^8.16.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-three-fiber": "^6.0.13",
-    "three": "^0.136.0"
+    "three": "^0.138.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@types/three": "^0.135.0",
+    "@types/three": "^0.138.0",
+    "esbuild": "^0.14.8",
     "typescript": "^4.5.4"
-  },
-  "main": "src/index.tsx",
-  "author": "Jordi Izquierdo",
-  "license": "ISC",
-  "description": ""
+  }
 }
