--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "r3f-webpack-template",
+  "name": "r3f-template",
   "version": "1.0.0",
   "author": "Jordi Izquierdo",
   "license": "ISC",
